upgraded project 🚀 | Updated dependencies

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Twitter</string>
 
     <string name="next">Next</string>
+    <string name="default_name_count">50</string>
 
     <!--     Lorem    -->
     <string name="lorem2">Lorem impsun </string>
